# github-activity-mirror

./: .gitignore  Cargo.toml  README.md  devshell.nix  flake.nix
src/: activity.rs  config.rs  git.rs  github.rs  main.rs
src/services/: gitea.rs  mod.rs
