[package]
name = "github-activity-mirror"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "~1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde_json = "~1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
toml = "0.8"
url = { version = "2.5", features = ["serde"] }
